# rental-service

./: README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  eslint.config.js  package-lock.json
backend/apps/apartments/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
backend/apps/apartments/management/commands/: create_test_data.py
backend/apps/apartments/migrations/: 0001_initial.py
backend/apps/users/: admin.py  backends.py  models.py
backend/apps/users/api/: serializers.py  urls.py  views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py
backend/requirements/: base.txt  dev.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.js
frontend/src/api/: axios.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: ApartmentCard.vue  ApartmentFilters.vue
frontend/src/pages/: ApartmentDetail.vue  ApartmentList.vue  Login.vue  LoginPage.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/store/: auth.js
frontend/src/views/: ApartmentDetail.vue  ApartmentList.vue  Login.vue
